--- a/index.html
+++ b/index.html
@@ -34,24 +34,69 @@
                 </div>
 
                 <div class="click-zone">
-                    <button id="poop-button">
-                        <img src="poop_icon.png" alt="Poop">
-                    </button>
-                </div>
-            </section>
+                    <!DOCTYPE html>
+                    <html lang="ja">
 
-            <section class="store-area">
-                <h2>Store</h2>
-                <div id="store">
-                    <!-- Items will be injected here by JS -->
-                </div>
-            </section>
-        </main>
+                    <head>
+                        <meta charset="UTF-8">
+                        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+                        <title>Gravity Poop</title>
+                        <link rel="stylesheet" href="style.css">
+                        <link
+                            href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Nunito:wght@400;700&display=swap"
+                            rel="stylesheet">
+                    </head>
 
-        <div id="golden-poop-container"></div>
-    </div>
+                    <body>
+                        <div class="container">
+                            <header>
+                                <h1>Gravity Poop</h1>
+                            </header>
 
-    <script src="script.js"></script>
-</body>
+                            <main>
+                                <section class="game-area">
+                                    <div class="stats">
+                                        <div class="stat-box">
+                                            <span id="poop-count">0</span> Poops
+                                        </div>
+                                        <div class="stat-box small">
+                                            <span id="pps-count">0</span> Poops/sec
+                                        </div>
+                                        <div class="stat-box small gold-essence-box">
+                                            <span id="gold-essence-count">0</span> Gold Essence
+                                        </div>
+                                        <div class="prestige-container">
+                                            <button id="prestige-button" class="hidden" disabled>Prestige</button>
+                                        </div>
+                                    </div>
 
-</html>
+                                    <div class="click-zone">
+                                        <button id="poop-button">
+                                            <img src="poop_icon.png" alt="Poop">
+                                        </button>
+                                    </div>
+                                </section>
+
+                                <section class="store-area">
+                                    <h2>Store</h2>
+                                    <div id="store">
+                                        <!-- Items will be injected here by JS -->
+                                    </div>
+                                </section>
+
+                                <section class="achievements-area">
+                                    <h2>Achievements</h2>
+                                    <div id="achievements-list">
+                                        <!-- Achievements will be injected here -->
+                                    </div>
+                                </section>
+                            </main>
+
+                            <div id="golden-poop-container"></div>
+                            <div id="notification-container"></div>
+                        </div>
+
+                        <script src="script.js"></script>
+                    </body>
+
+                    </html>
